Fixed mobile viewport not hiding overflow.

--- a/styles_new.css
+++ b/styles_new.css
@@ -61,8 +61,8 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background-color: white;
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  background-color: white; }
 
 .grid-container {
   top: 0;
